# katib

./: .gitignore  CHANGELOG.md  COMPONENT-BUILDER.md  LICENSE  MIGRATING.md  PACK-FORMAT.md  README.md  SKILL.md  TUTORIAL.md  capabilities.yaml  install.sh  package.json  pyproject.toml  seed-manifest.yaml  uninstall.sh
core/: brand_presets.py  capabilities.py  component_ops.py  compose.py  content_lint.py  context_sensor.py  gate.py  output.py  pack.py  preview_scrub.py  previews.py  project_config.py  recipe_ops.py  registry.py  render.py  request_log.py  tokens.base.yaml  tokens.py
memory/: component-audit.jsonl  component-requests.jsonl  context-inferences.jsonl  domain-requests.jsonl  recipe-audit.jsonl  recipe-requests.jsonl
recipes/: bilingual-svg-diagram.yaml  business-meeting-minutes.yaml  business-proposal-letter.yaml  business-proposal-one-pager.yaml  business-proposal-proposal.yaml  components-demo.yaml  editorial-article.yaml  editorial-white-paper.yaml  financial-credit-note.yaml  financial-invoice.yaml  financial-purchase-order.yaml  financial-quote.yaml  formal-authority-letter.yaml  formal-noc.yaml  legal-mou.yaml  legal-nda.yaml  legal-service-agreement.yaml  legal-statement-of-work.yaml  personal-bio.yaml  personal-cover-letter.yaml  personal-cv.yaml  personal-employment-offer-letter.yaml  phase-1-trivial.yaml  phase-2-day2-showcase.yaml  phase-2-day3-showcase.yaml  phase-2-day4-showcase.yaml  phase-2-day5-showcase.yaml  phase-2-day6-showcase.yaml  phase-3a-layout-showcase.yaml  phase-3c-content-showcase.yaml  report-progress.yaml  tutorial-cheatsheet.yaml  tutorial-handoff.yaml  tutorial-how-to.yaml  (+3 more)
(+603 files in other folders)
