[project]
name = "katib"
version = "0.3.0"
description = "Katib — bilingual (EN + AR) document-generation skill for Claude Code"
requires-python = ">=3.10"
dependencies = [
    "weasyprint>=60.0",
    "pypdf>=4.0",
    "pyyaml>=6.0",
    "pillow>=10.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
screenshots = [
    "playwright>=1.40",
]
gemini = [
    "google-genai>=0.5",
]

[tool.katib]
# Skill-level defaults — overridable via ~/.config/katib/config.yaml
output_destination = "vault"
image_model_default = "nano-banana-2"
